[gd_scene load_steps=6 format=3 uid="uid://continuous_beam_001"]

[ext_resource type="Script" path="res://scripts/spells/continuous_beam.gd" id="1_beam"]
[ext_resource type="Texture2D" uid="uid://placeholder_beam" path="res://art/placeholder_beam.png" id="2_beam_sprite"]
[ext_resource type="Texture2D" uid="uid://placeholder_impact" path="res://art/placeholder_impact.png" id="3_impact_sprite"]

[sub_resource type="Gradient" id="Gradient_beam"]
offsets = PackedFloat32Array(0, 0.5, 1)
colors = PackedColorArray(0.2, 0.6, 1, 0, 0.3, 0.8, 1, 1, 0.2, 0.6, 1, 0)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_impact"]
particle_flag_disable_z = true
direction = Vector3(-1, 0, 0)
spread = 30.0
initial_velocity_min = 50.0
initial_velocity_max = 100.0
gravity = Vector3(0, 0, 0)
scale_min = 0.5
scale_max = 1.5
color_ramp = SubResource("Gradient_beam")

[node name="ContinuousBeam" type="Node2D"]
script = ExtResource("1_beam")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(800, 0)
collision_mask = 5
hit_from_inside = true

[node name="BeamContainer" type="Node2D" parent="."]

[node name="BeamSegment" type="Sprite2D" parent="BeamContainer"]
position = Vector2(400, 0)
scale = Vector2(12.5, 1)
texture = ExtResource("2_beam_sprite")
offset = Vector2(0, 0)
region_enabled = true
region_rect = Rect2(0, 0, 64, 32)

[node name="ImpactSprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_impact_sprite")
offset = Vector2(0, 0)

[node name="ImpactParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 20
process_material = SubResource("ParticleProcessMaterial_impact")
lifetime = 0.5
one_shot = false
explosiveness = 0.3

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = false

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
bus = &"SFX"
